--- a/00-dedication.tex
+++ b/00-dedication.tex
@@ -1,7 +1,11 @@
+%\chapter{Acknowledgments}
+
+%All the work done, for so many months, was supported by a lot of people. I thank everyone in my life who
+
 \begin{flushright} 
   %\null\vspace{\stretch{1}}
   \null
   \vfill
-  \emph{\Large{\dots to the world in general}} \\
+  \emph{\Large{\dots to everyone who believes in me}} \\
   \vspace{3cm}
 \end{flushright}
