--- a/thesis.tex
+++ b/thesis.tex
@@ -98,7 +98,7 @@
 	    \maketitle
 		\input{00-colophon}
 		\cleardoublepage
-		\input{00-dedication}
+		%\input{00-dedication}
 		\clearpage
 		{\centering \emph{This page was intentionally left blank.} \\ }
 		\cleardoublepage
