Fixed typos, image placing and added written zeros to avoid confusion between 0 and O.

--- a/blockchainframeworks.tex
+++ b/blockchainframeworks.tex
@@ -255,7 +255,7 @@ This is a very specific purpose, which means that Corda's application on Supply 
 \label{fig:shared_ledger}
 \end{figure}
 
-\subsection{Concepts}
+\subsubsection{Concepts}
 Corda is also a \textbf{permissioned blockchain}. While the ledger is global, some transactions and agreements involve only certain groups and should be visible only to the participating parties or those with a reason to be able to see them. 
 
 There are some other important concepts to understand how Corda works:
