--- a/problemstatement.tex
+++ b/problemstatement.tex
@@ -67,7 +67,7 @@ The main objective has already been defined: to improve the security traits, tra
 % MAIN THESIS we are defending defined here
 Therefore, the main statement that this thesis defends is: 
 
-\par \textbf{\textit{"Blockchain a good architectural design for the Supply Chain Management domain."}}
+\par \textbf{\textit{"Blockchain is a good architectural design for the Supply Chain Management domain."}}
 
 % THESIS branches: all the possibilities that might happen
 What remains to be answered, though, is if mentioned attributes are really the right requirements to focus on, and if Blockchain can really fill them, as a distributed architecture. Thus, it can be seen that this statement might be based on some assumptions, which gives rise to some more questions. For instance, we are assuming that the points of focus from Section~\ref{sec:points-of-focus} are really the most important ones, given the background information that was collected.
