--- a/prototype/prototype4.tex
+++ b/prototype/prototype4.tex
@@ -45,7 +45,7 @@ As can be seen in Table~\ref{table:requirements-validation}, a few of the functi
 		SCM3 & \begin{tabular}[c]{@{}l@{}}Write and deploy contractual\\ agreements\end{tabular}                            & \cellcolor[HTML]{FFFFC7}Partially    & A3    & Create network identity cards                                                                                            & Possible                             \\ \hline
 		SCM4 & Query all the steps of a product's life                                                                      & \cellcolor[HTML]{FFFFC7}Partially    & A4    & \begin{tabular}[c]{@{}l@{}}Assign identity cards to participant\\  instances\end{tabular}                                & Possible                             \\ \hline
 		SCM5 & Query owner of an asset                                                                                      & Possible                             & A5    & \begin{tabular}[c]{@{}l@{}}Update details of participants,\\  inc/ balance\end{tabular}                                  & Possible                             \\ \hline
-		SCM6 & Create mew assets                                                                                            & Possible                             & A6    & Create, edit, delete any asset                                                                                           & Possible                             \\ \hline
+		SCM6 & Create new assets                                                                                            & Possible                             & A6    & Create, edit, delete any asset                                                                                           & Possible                             \\ \hline
 		SCM7 & Edit and delete owned assets                                                                                 & Possible                             & A7    & \begin{tabular}[c]{@{}l@{}}Submit any existing type of \\ transaction\end{tabular}                                       & Possible                             \\ \hline
 		SCM8 & Create shipment with owned assets                                                                            & Possible                             & A8    & Change a user's role                                                                                                     & Possible                             \\ \hline
 		SCM9 & \begin{tabular}[c]{@{}l@{}}Attach contractual agreement\\ to shipment\end{tabular}                           & Possible                             & A9    & \begin{tabular}[c]{@{}l@{}}Give other users permission to \\ edit roles\end{tabular}                                     & Possible                             \\ \hline
