--- a/survey/survey2.tex
+++ b/survey/survey2.tex
@@ -1,4 +1,3 @@
-
 \subsection{Question Group 2 - Blockchain Knowledge and Opinions}
 
 This section features some questions that inquire about the respondent's knowledge in blockchain, and their opinions about the relationship between cryptocurrencies and blockchain. Are blockchains independent of cryptocurrencies or not? And in which cases? These are questions that will also help decide the need of a cryptocurrency for the design of the system that was proposed.
@@ -7,14 +6,14 @@ This section features some questions that inquire about the respondent's knowled
  %GRAFICO BLOCKCHAIN KNOWLEDGE
  \begin{figure}[H]
 \centering
-\includegraphics[scale=0.65]{media/survey_group2/blockchain_knowledge.pdf}
+\includegraphics[scale=0.40]{media/survey_group2/blockchain_knowledge.pdf}
 \caption{Question about Blockchain knowledge.}
 \label{fig:blockchain_knowledge}
 \end{figure}
 
 In Figure~\ref{fig:blockchain_knowledge}, it can be seen that most answers are in the middle of the scale, while both the extremes have few answers, which closely resemble a gaussian or normal distribution. 
 
-Indeed, when calculated, the skew of this data is about -0,065104294, which is a very low number (the standard error was about 0,46) and close to 0. A normal distribution has a skew of 0, so this can be said to be a good approximation. Additional, it can be said that there is not much of a bias towards accepting or denying blockchain when answering other questions, either from knowing too much or too little, since the knowledge curve seems to be normal.
+Indeed, when calculated, the skew of this data is about -0,065104294, which is a very low number (the standard error was about 0,46) and close to 0 (zero). A normal distribution has a skew of 0 (zero), so this can be said to be a good approximation. Additional, it can be said that there is not much of a bias towards accepting or denying blockchain when answering other questions, either from knowing too much or too little, since the knowledge curve seems to be normal.
  
 \subsection*{2 - Rate the affirmations about the use of cryptocurrencies in the blockchain.}
 
