--- a/survey/survey3.tex
+++ b/survey/survey3.tex
@@ -27,8 +27,8 @@ The data collected from the first 2 questions can be visualized in the graphs fr
 
 \begin{figure}[h]
     %\makebox[2pt]{}
-    \resfig{survey_group3/inventory_management_importance}{Inventory Management Importance}
-    \resfig{survey_group3/absenceinfo_delays_affirmation}{Relation between the absence of information and delays}
+    \resfig{survey_group3/absenceinfo_delays_affirmation}{Inventory Management Importance}
+    \resfig{survey_group3/inventory_management_importance}{Relation between the absence of information and delays}
 
       \caption{Questions to rank inventory management importance and relationship between absence of information and delays.}
     \label{fig:group3_graphics}
@@ -83,6 +83,8 @@ Finally, with the objective of ascertaining whether quality assurance is also an
   \item Non-compliance with certain standards is a big issue that affects the reputation of companies working with sensitive products.
   \item In your experience, do you think that compliance with quality standards would be easier to achieve if all the products were traced as well as the processes they go through?
 \end{enumerate}
+
+\pagebreak
 
 \begin{figure}[h]
   %\makebox[2pt]{}
