--- a/survey/survey4.tex
+++ b/survey/survey4.tex
@@ -23,11 +23,12 @@ Therefore, the following classification for the lists of results will be adopted
 \end{itemize}
 
 \subsection*{1 - Rank the importance of some aspects which Supply Chains aim to improve.}
- 
-%Dividir em mais imagens?
-%\todo{fcorreia: sim, está muito pequeno para se ler assim. talvez quatro ou cinco destes gráficos lado a lado fiquem ok...}
 
-\begin{figure}[h]
+In this category, we can see the results on Figure~\ref{fig:importance_SC_improvement_points} and then represented on Table~\ref{table:metrics-importance-improvement-sc}. Pretty much all the options had a range of 3 and deviations close to 1, which is to be expected. Traceability had the highest skew value, as there seemed to be some dissent, as a few outlier values pushed the mean to be lower than the median. However, it still rated the highest, by importance. 
+
+\pagebreak
+
+\begin{figure}[H]
 \centering
 \includegraphics[scale=0.60]{media/survey_group4/importance_SC_improvement_points.pdf}
 \caption{Question: "Rank the importance of some aspects which Supply Chains aim to improve."}
@@ -57,7 +58,6 @@ Therefore, the following classification for the lists of results will be adopted
 
 %%%%%%%% TABLE END %%%%%%%%%%%%%%%%
 
-In this category, we can see the results on Table~\ref{table:metrics-importance-improvement-sc}. Pretty much all the options had a range of 3 and deviations close to 1, which is to be expected. Traceability had the highest skew value, as there seemed to be some dissent, as a few outlier values pushed the mean to be lower than the median. However, it still rated the highest, by importance. 
 
 The importance ranking described as before follows below:
 
@@ -156,14 +156,14 @@ The final important group of questions featured 2 questions about the viability 
 
 \begin{figure}[h]
     \centering
-    \includegraphics[scale=0.60]{media/survey_group4/blockchain_usecases_sc.pdf}
+    \includegraphics[scale=0.50]{media/survey_group4/blockchain_usecases_sc.pdf}
     \caption{Question about the Blockchain use cases for the supply chain.}
     \label{fig:blockchain_use_cases}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[H]
     \centering
-    \includegraphics[scale=0.60]{media/survey_group4/blockchain_application_benefits.pdf}
+    \includegraphics[scale=0.50]{media/survey_group4/blockchain_application_benefits.pdf}
     \caption{Question about the Blockchain benefits for the supply chain.}
     \label{fig:blockchain_benefits}
     \end{figure}
