--- a/00-abstract.tex
+++ b/00-abstract.tex
@@ -3,13 +3,13 @@
 Companies in any kind of industry, be it electronics, pharmaceutics, food, or others, need to support their operations by managing the exchange of information and resources with other companies. This flow of resources and information is commonly referred to as the supply chain. In a practical sense, the flow of products and services goes from supplier to consumer, but as supply chains grow more complex, they span multiple businesses and relationships, and are interlaced in many ways. The paths the information takes are not always obvious, making it hard to track either information or resources. This is a reason why supply chain management (SCM), the discipline which deals with the coordination of a supply chain, is becoming increasingly more important. 
 
 % Problem
-Managing inventory and suppliers while maintaining safety, quality and keeping to the schedule is a difficult task. Delays are common, and a company’s finances, growth and reputation are affected. This is further aggravated by the fact that information is not always accurate or available when needed. And the fact that companies value their privacy makes it so that sharing information with others is not always simple or desirable. Furthermore, supply chains have many manual processes of inserting information into the companies systems, which are slow and error-prone.
+Managing inventory and suppliers while maintaining safety, quality and keeping to the schedule is a difficult task. Delays are common, and a company's finances, growth and reputation are affected. This is further aggravated by the fact that information is not always accurate or available when needed. And the fact that companies value their privacy makes it so that sharing information with others is not always simple or desirable. Furthermore, supply chains have many manual processes of inserting information into the companies' systems, which are slow and error-prone.
 
 % Why is it a problem
 Provenance and traceability of a supply chain are a big objective for companies, along with improving security, efficiency and effectiveness. Most of these issues are, in great part, caused by the use of inadequate processes or even of inadequate software, which, traditionally, is centralized and often difficult to extend. The software used is also prone to synchronization problems, leading to big delays in both relaying the information and resources and making payments possible. 
 
 % Solution
-One way to approach these specific problems of supply chains is to prioritize them and update the supporting technologies with an updated architecture that can focus on solving them. One such technology that might be able to handle all the requirements that these problems elicit is the blockchain distributed architecture. Blockchain is a decentralized technology that has no single point of failure and allows for the immutable storage of verifiable data all over the computers that store it. With blockchain, information is stored sequentially and any piece of information, since the genesis of the chain is accessible anytime, anywhere. As such, blockchains might be the adequate mean to achieve traceability of a supply chain. At the same time they are a secure and incorruptible way to store information, with a fast synchronization time. This technology could possible lead the way to turning the chain fully digital and automated, closing the analog gaps and possibly achieving a more global overview of products and processes.
+One way to approach these specific problems of supply chains is to prioritize them and update the supporting technologies with an updated architecture that can focus on solving them. One such technology that might be able to handle all the requirements that these problems elicit is the blockchain distributed architecture. Blockchain is a decentralized technology that has no single point of failure and allows for the immutable storage of verifiable data all over the computers that store it. With blockchain, information is stored sequentially and any piece of information, since the genesis of the chain is accessible anytime, anywhere. As such, blockchains might be the adequate mean to achieve traceability of a supply chain. At the same time they are a secure and incorruptible way to store information, with a fast synchronization time. This technology could possibly lead the way to turning the chain fully digital and automated, closing the analog gaps and possibly achieving a more global overview of products and processes.
 
 This dissertation focuses on researching the extent of the issues of supply chain management, and to what extent blockchain could be applied in a beneficial way to solve these issues. The real statement here being questioned is if blockchain architectures can be a good fit for supply chain management.
 
