--- a/survey/survey1.tex
+++ b/survey/survey1.tex
@@ -1,6 +1,6 @@
 \section{Results}
 
-The results of the survey are analyzed in this chapter~\footnote{The results are available at:\url{https://drive.google.com/file/d/1Zyg8BGj0dV6KFKPZdshgbYHYi-m8snGX/view?usp=sharing}}. Each group of questions features the graphs and metrics of the corresponding questions, and a brief informal analysis is done, based on the values.
+The results of the survey are analyzed in this chapter~\footnote{The results are available at: \url{https://drive.google.com/file/d/1Zyg8BGj0dV6KFKPZdshgbYHYi-m8snGX/view?usp=sharing}}. Each group of questions features the graphs and metrics of the corresponding questions, and a brief informal analysis is done, based on the values.
 
 
 \subsection{Question Group 1 - General Information and Participant Classification}
@@ -22,7 +22,7 @@ The results of the survey are analyzed in this chapter~\footnote{The results are
 \begin{figure}[ht]
     %\makebox[2pt]{}
 
-    \resfig{survey_group1/sc_role}{Relation to Supply Chain}
+    \resfig{survey_group1/sc_role}{Role played in relation to Supply Chain Management}
     \resfig{survey_group1/sc_industry}{Industry}
 
     \resfig{survey_group1/sc_experience}{Years of experience}
@@ -39,7 +39,7 @@ The data, as can be seen in Figure~\ref{fig:group1_graphics}, can be summarized 
 
 \begin{itemize}
 \item Most people, about \textbf{68\% of the respondents, have an active role working in areas related to supply chain}. From these, 56\% work in a company directly involved in the processes of supply, manufacturing, logistics, retail or transports and 12\% work in consulting related to these areas. The rest are people with a profile that gives them knowledge about supply chain, be it through education or other type of contact with the field.
-\item \textbf{ most common area of supply chain to work in is, by far, Transport and Logistics}, with 52\% of the respondents saying they have work experience in this field. \textbf{Health and Retail} are also common areas, with 20\% and 16\% respectively.
+\item \textbf{The most common area of supply chain to work in is, by far, Transport and Logistics}, with 52\% of the respondents saying they have work experience in this field. \textbf{Health and Retail} are also common areas, with 20\% and 16\% respectively.
 \item 48\% of the respondents have less than 3 years of experience, with 36\% having 3 to 5 years and 8\% having 5 to 10 years. However, in total, there were \textbf{only 2 respondents (8\%) without any years of experience in the field}.
 \item 62,5\% of the respondents work in medium to big companies (more than 50 workers), from which 41,7\% work in companies with more than 1000 people and 12,5\% in companies with between 200 and 1000 people.
 \end{itemize}
