Fixed bibliography and references

--- a/references.bib
+++ b/references.bib
@@ -1,5 +1,4 @@
 @article{Bayer1993,
-abstract = {To establish that a document was created after a given moment in time, it is necessary to report events that could not have been predicted before they happened. To establish that a document was created before a given moment in time, it is necessary to cause an event based on the document, which can be observed by others. Cryptographic hash functions can be used both to report events succinctly, and to cause events based on documents without revealing their contents. Haber and Stornetta have proposed two schemes for digital time-stamping which rely on these principles [HaSt 91]. We reexamine one of those protocols, addressing the resource constraint required for storage and verification of time-stamp certificates. By using trees, we show how to achieve an exponential increase in the publicity obtained for each time-stamping event, while reducing the storage and the computation required in order to validate a given certificate. We show how time-stamping can be used in certain circumstances to extend the useful lifetime of different kinds of cryptographic certifications of authenticity, in the event that the certifying protocol is compromised. This can be applied to digital signatures, or to time-stamping itself, making the digital time-stamping process renewable.},
 author = {Bayer, Dave and Haber, Stuart and Stornetta, W. Scott},
 doi = {10.1007/978-1-4613-9323-8_24},
 file = {:D$\backslash$:/OneDrive - fe.up.pt/Documents/MIEIC/5o Ano/Thesis/Articles/Unread/978-1-4613-9323-8{\_}24.pdf:pdf},
@@ -57,7 +56,7 @@ year = {2017}
 abstract = {Digital supply chain integration is becoming increasingly dynamic. Access to customer demand needs to be shared effectively, and product and service deliveries must be tracked to provide visibility in the supply chain. Business process integration is based on standards and reference architectures, which should offer end-to-end integration of product data. Companies operating in supply chains establish process and data integration through the specialized intermediate companies, whose role is to establish interoperability by mapping and integrating company-specific data for various organizations and systems. This has typically caused high integration costs, and diffusion is slow. This paper investigates the requirements and functionalities of supply chain integration. Cloud integration can be expected to offer a cost-effective business model for interoperable digital supply chains. We explain how supply chain integration through the blockchain technology can achieve disruptive transformation in digital supply chains and networks.},
 author = {Korpela, Kari and Hallikas, Jukka and Dahlberg, Tomi},
 doi = {10.24251/HICSS.2017.506},
-file = {:D$\backslash$:/OneDrive - fe.up.pt/Documents/MIEIC/5o Ano/Thesis/Articles/Read/paper0517.pdf:pdf},
+booktitle = { Hawaii International Conference on System Sciences 2017 (HICSS-50)},
 isbn = {9780998133102},
 pages = {4182--4191},
 title = {{Digital Supply Chain Transformation toward Blockchain Integration}},
@@ -111,7 +110,6 @@ year = {2011}
 }
 
 @article{Lummus2014,
-abstract = {Interest in supply chain management has steadily increased since the 1980s when firms saw the benefits of collaborative relationships within and beyond their own organization. Firms are finding that they can no longer compete effectively in isolation of their suppliers or other entities in the supply chain. A number of definitions of supply chain management have been proposed in the literature and in practice. This paper defines the concept of supply chain management and discusses its historical evolution. The term does not replace supplier partnerships, nor is it a description of the logistics function. The competitive importance of linking a firm's supply chain strategy to its overall business strategy and some practical guidelines are offered for successful supply chain management.},
 author = {Lummus, Rhonda R and Vokurka, Robert J},
 doi = {10.1108/02635579910243851},
 file = {:D$\backslash$:/OneDrive - fe.up.pt/Documents/MIEIC/5o Ano/Thesis/Articles/Unread/Defining supply chain management - a historical perspective and pratical guidelines.pdf:pdf},
@@ -127,13 +125,17 @@ volume = {99},
 year = {2014}
 }
 
-@book{Habib2011,
-author = {Habib, Mamun},
+@incollection{Habib11,
+author = {Mamun Habib},
+title = {Supply Chain Management (SCM): Theory and Evolution},
+booktitle = {Supply Chain Management},
+publisher = {IntechOpen},
+address = {Rijeka},
 year = {2011},
-month = {09},
-pages = {},
-title = {{Supply Chain Management (SCM): Theory and Evolution}},
-isbn = {978-953-307-250-0}
+editor = {Mamun Habib},
+chapter = {1},
+doi = {10.5772/24573},
+url = {https://doi.org/10.5772/24573}
 }
 
 @article{Ballou2007,
@@ -167,12 +169,21 @@ title = {{Supply Chain Failures - A Study of the Nature, Causes and Complexity o
 year = {2013}
 }
 
-@misc{Ganeshan1995,
+@article{Ganeshan1995,
+abstract = {The use of laboratory experiments in supply chain management research is gaining momentum and provides an opportunity for researchers to make exciting new contributions to the field. In this introductory essay, we describe the motivation for the discussion forum, and introduce the four remaining essays presented in the forum. These essays discuss various topics concerning experimental research, with the goal of enhancing our community's understanding of experimental methods.},
 author = {Ganeshan, Ram and Harrison, Terry P},
-file = {:D$\backslash$:/OneDrive - fe.up.pt/Documents/MIEIC/5o Ano/Thesis/Articles/Unread/An Introduction to Supply Chain Management.pdf:pdf},
-title = {{An Introduction to Supply Chain Management}},
+doi = {10.1111/j.1745-493X.2011.03231.x},
+isbn = {0136216161},
+issn = {1745493X},
+journal = {Supply Chain Management An International Journal},
+number = {July},
+pages = {3--4},
+title = {{Introduction to Supply Chain Management}},
+url = {http://lcm.csa.iisc.ernet.in/scm/supply_chain_intro.html},
+volume = {47},
 year = {1995}
 }
+
 
 @article{Pilkington2015,
 abstract = {This paper expounds the main principles behind blockchain technology and some of its cutting-edge applications. Firstly, we present the core concepts at the heart of the blockchain, and we discuss the potential risks and drawbacks of public distributed ledgers, and the shift toward hybrid solutions. Secondly, we expose the main features of decentralized public ledger platforms. Thirdly, we show why the blockchain is a disruptive and foundational technology, and fourthly, we sketch out a list of important applications, bearing in mind the most recent evolutions.},
@@ -190,18 +201,14 @@ year = {2015}
 }
 
 @article{Buterin2014,
-abstract = {Satoshi Nakamoto's development of Bitcoin in 2009 has often been hailed as a radical development in money and currency, being the first example of a digital asset which simultaneously has no backing or "intrinsic value" and no centralized issuer or controller. However, another, arguably more important, part of the Bitcoin experiment is the underlying blockchain technology as a tool of distributed consensus, and attention is rapidly starting to shift to this other aspect of Bitcoin. Commonly cited alternative applications of blockchain technology include using on-blockchain digital assets to represent custom currencies and financial instruments ("colored coins"), the ownership of an underlying physical device ("smart property"), non-fungible assets such as domain names ("Namecoin"), as well as more complex applications involving having digital assets being directly controlled by a piece of code implementing arbitrary rules ("smart contracts") or even blockchain-based "decentralized autonomous organizations" (DAOs). What Ethereum intends to provide is a blockchain with a built-in fully fledged Turing-complete programming language that can be used to create "contracts" that can be used to encode arbitrary state transition functions, allowing users to create any of the systems described above, as well as many others that we have not yet imagined, simply by writing up the logic in a few lines of code.},
 author = {Buterin, Vitalik},
-doi = {10.5663/aps.v1i1.10138},
 file = {:D$\backslash$:/OneDrive - fe.up.pt/Documents/MIEIC/5o Ano/Thesis/Articles/Unread/Ethereum{\_}white{\_}paper-a{\_}next{\_}generation{\_}smart{\_}contract{\_}and{\_}decentralized{\_}application{\_}platform-vitalik-buterin.pdf:pdf},
-isbn = {9780101808422},
-issn = {19233299},
 journal = {Ethereum White Paper},
 number = {January},
 pages = {1--36},
 pmid = {21382811},
 title = {{A Next-Generation Smart Contract and Decentralized Application Platform}},
-url = {http://buyxpr.com/build/pdfs/EthereumWhitePaper.pdf},
+url = {https://github.com/ethereum/wiki/wiki/White-Paper},
 year = {2014}
 }
 
@@ -260,15 +267,17 @@ file = {:C$\backslash$:/Users/PedroCosta/Downloads/casper{\_}basics.pdf:pdf},
 mendeley-groups = {Ethereum},
 pages = {1--10},
 title = {{Casper the Friendly Finality Gadget}},
-url = {http://arxiv.org/abs/1710.09437},
+url = {https://github.com/ethereum/research/blob/master/papers/casper-basics/casper_basics.pdf},
+note = {Date~Accessed: 2018-02-07},
 year = {2017}
 }
 
 @misc{Buterin2013,
 author = {Buterin, Vitalik},
-howpublished = {URL: https://bitcoinmagazine.com/articles/what-proof-of-stake-is-and-why-it-matters-1377531463/},
+url = {https://bitcoinmagazine.com/articles/what-proof-of-stake-is-and-why-it-matters-1377531463/},
 mendeley-groups = {Ethereum},
 title = {{What Proof of Stake Is And Why It Matters}},
+note = {Date~Accessed: 2018-03-20},
 month = {08},
 year = {2013},
 }
@@ -302,7 +311,7 @@ file = {:C$\backslash$:/Users/PedroCosta/AppData/Local/Mendeley Ltd./Mendeley De
 mendeley-groups = {Ethereum},
 title = {{On Sharding Blockchains}},
 url = {https://github.com/ethereum/wiki/wiki/Sharding-FAQ},
-urldate = {February, 2018}
+note = {Date~Accessed: 2018-02-07},
 }
 
 @article{Poon2017,
@@ -323,7 +332,7 @@ file = {:C$\backslash$:/Users/PedroCosta/AppData/Local/Mendeley Ltd./Mendeley De
 mendeley-groups = {Ethereum},
 title = {{What is the Raiden Network?}},
 url = {https://raiden.network/101.html},
-urldate = {2018-02-07}
+note = {Date~Accessed: 2018-02-07}
 }
 
 @misc{Vukolic2017,
@@ -378,14 +387,14 @@ author = {{IBM Research}},
 pmid = {15014603},
 title = {{Hyperledger Fabric Architecture Explained}},
 url = {http://hyperledger-fabric.readthedocs.io/en/release-1.1/arch-deep-dive.html},
-urldate = {2018-06-26}
+note = {Date~Accessed: 2018-06-26},
 }
 
 @misc{FabricDocPeers,
 author = {{IBM Research}},
 title = {{Hyperledger Fabric Peers Explained}},
 url = {http://hyperledger-fabric.readthedocs.io/en/release-1.1/peers/peers.html},
-urldate = {2018-06-27}
+note = {Date~Accessed: 2018-06-27},
 }
 
 @article{IBMResearch2017,
@@ -408,7 +417,7 @@ mendeley-groups = {Framework Comparison},
 number = {June},
 pages = {1--8},
 title = {{Comparison of Ethereum, Hyperledger Fabric and Corda}},
-url = {www.twitter.com/fsblockchain{\%}0Awww.facebook.de/fsblockchain},
+url = {http://explore-ip.com/2017_Comparison-of-Ethereum-Hyperledger-Corda.pdf},
 year = {2017}
 }
 
@@ -418,30 +427,35 @@ file = {:D$\backslash$:/OneDrive - fe.up.pt/Documents/MIEIC/5o Ano/Thesis/Articl
 mendeley-groups = {Corda},
 pages = {1--15},
 title = {{Corda: An Introduction}},
+url = {https://docs.corda.net/_static/corda-introductory-whitepaper.pdf},
 year = {2016}
 }
 
 @misc{ComposerIntro,
 file = {:C$\backslash$:/Users/PedroCosta/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/19475029cfbb4ccee538701bb23b0bfdaa4d9735.html:html},
+author = {Hyperledger Composer Development Team},
 title = {{Introduction @ hyperledger.github.io}},
 url = {https://hyperledger.github.io/composer/latest/introduction/introduction.html},
+note = {Date~Accessed: 2018-05-31},
 urldate = {2018-05-31},
 year = {2018}
 }
 
 @misc{AmbrosusTechno,
 file = {:C$\backslash$:/Users/PedroCosta/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/9562c255e7f38e46bb76b390f21c3402a4273a7f.html:html},
+author = {Ambrosus Development Team},
 title = {{Technology @ ambrosus.com}},
 url = {https://ambrosus.com/technology/},
-urldate = {07/06/2018},
+note = {Date~Accessed: 2018-06-07},
 year = {2018}
 }
 
 @misc{OriginTrailTechno,
 file = {:C$\backslash$:/Users/PedroCosta/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/33688d12d249439f3543b5429b85987e27e15775.html:html},
+author = {Rakic, Branimir and Levak, Tomaz and Drev, Ziga and Savic, Sava and Veljkovic, Aleksandar},
 title = {{Technology @ origintrail.io}},
 url = {https://origintrail.io/technology},
-urldate = {07/06/2018},
+note = {Date~Accessed: 2018-06-07},
 year = {2018}
 }
 
@@ -494,6 +508,7 @@ mendeley-groups = {Integration Models},
 title = {{What Is Blockchain Technology, and What Is Its Potential Impact on the Supply Chain?}},
 url = {http://cerasis.com/2016/06/29/blockchain-technology/},
 urldate = {2018-02-08},
+note = {Date~Accessed: 2018-02-08},
 year = {2016}
 }
 
@@ -508,11 +523,11 @@ year = {2017}
 }
 
 @misc{Rakic2017,
-abstract = {Blockchain technology has huge potential to decentralize trust in supply chains and bring measurable benefits and value to the public and private sectors. To unlock this potential, the OriginTrail protocol was designed purposefully to tackle the main challenges which limit the fluent exchange of, and integrity of data in product supply chains. With supply chain data becoming increasingly fragmented, scalability and cost concerns of current decentralized solutions become evident. OriginTrail is a unique solution allowing IT providers in supply chains to set up blockchain supported data sharing in multi-organizational environment. It helps them build transparency beyond the " one step down, one step up " traceability principle. Furthermore, it improves the integrity of product data and drives efficiencies for stakeholders. The first version of the OriginTrail solution is proven and currently deployed in the food industry. The upcoming open source version will be suitable to any product supply chain such as automotive, consumer goods, pharmaceutical etc.},
 author = {Rakic, Branimir and Levak, Tomaz and Drev, Ziga and Savic, Sava and Veljkovic, Aleksandar},
 file = {:D$\backslash$:/OneDrive - fe.up.pt/Documents/MIEIC/5o Ano/Thesis/Articles/Similar Projects/OriginTrail-White-Paper.pdf:pdf},
 mendeley-groups = {Similar Applications},
 title = {{OriginTrail: First Purpose Built Protocol for Supply Chains Based on Blockchain}},
+url = {https://origintrail.io/storage/documents/OriginTrail-White-Paper.pdf},
 year = {2017}
 }
 
@@ -532,6 +547,7 @@ mendeley-groups = {Similar Applications},
 title = {{Maersk and IBM Launch Digital Joint Venture}},
 url = {https://www.maersk.com/stories/maersk-and-ibm-launch-digital-joint-venture},
 urldate = {2018-02-08},
+note = {Date~Accessed: 2018-02-08},
 year = {2018}
 }
 
@@ -543,6 +559,7 @@ file = {:C$\backslash$:/Users/PedroCosta/AppData/Local/Mendeley Ltd./Mendeley De
 title = {{On Public and Private Blockchains}},
 url = {https://blog.ethereum.org/2015/08/07/on-public-and-private-blockchains/},
 urldate = {2018-03-20},
+note = {Date~Accessed: 2018-03-20},
 year = {2015}
 } 
 
@@ -551,6 +568,7 @@ author = {Andersen, Ole and Vogdrup-Schmidt, Louise},
 file = {:C$\backslash$:/Users/PedroCosta/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/8f228babbe8827d572f077307a770bef0c7dd0b4.html:html},
 title = {{Rivals reject blockchain solution from Maersk and IBM}},
 url = {https://shippingwatch.com/carriers/Container/article10602520.ece},
+note = {Date~Accessed: 2018-06-07},
 year = {2018}
 }
 
@@ -560,8 +578,10 @@ file = {:C$\backslash$:/Users/PedroCosta/AppData/Local/Mendeley Ltd./Mendeley De
 title = {{Understanding global supply chains}},
 url = {https://gbv.itcilo.org/index.php/briefing/show{\_}paragraph/id/127.html},
 urldate = {27/06/2018},
+note = {Date~Accessed: 2018-06-27},
 year = {2018}
 }
+
 
 @misc{LinuxFoundation2018,
 author = {{Linux Foundation}},
@@ -569,18 +589,18 @@ file = {:C$\backslash$:/Users/PedroCosta/AppData/Local/Mendeley Ltd./Mendeley De
 title = {introduction@hyperledger.github.io},
 url = {https://hyperledger.github.io/composer/latest/introduction/introduction.html},
 urldate = {2018-05-20},
+note = {Date~Accessed: 2018-05-20},
 year = {2018}
 }
 
 @article{720574, 
-author={}, 
+author={IEEE Computer Society}, 
 journal={IEEE Std 830-1998}, 
 title={IEEE Recommended Practice for Software Requirements Specifications}, 
 year={1998}, 
 volume={}, 
 number={}, 
-pages={1-40}, 
-keywords={formal specification;IEEE Std 830-1998;IEEE recommended practice;IEEE/EIA Std 12207.1-1997;commercial software product selection;contracts;customers;guidelines;in-house software product selection;prototyping;software development;software requirements specification;standards compliance;suppliers;system requirements specifications;Software requirements and specifications;contract;customer;prototyping;software requirements specification;supplier;system requirements specifications}, 
+pages={1-40},
 doi={10.1109/IEEESTD.1998.88286}, 
 ISSN={}, 
 month={Oct},}
@@ -598,5 +618,6 @@ year = {2015}
 author = {Prokle, Michael},
 file = {:D$\backslash$:/OneDrive - fe.up.pt/Documents/MIEIC/5o Ano/Thesis/Articles/Theory and Practice of Supply Chain Synchronization.pdf:pdf},
 title = {{Theory and Practice of Supply Chain Synchronization}},
+journal = {Doctoral Dissertations},
 year = {2017}
 }
