--- a/thesis.tex
+++ b/thesis.tex
@@ -192,7 +192,7 @@
 		\begin{singlespace}
 		\begin{footnotesize}
 		\addcontentsline{toc}{chapter}{References}
-		\bibliographystyle{amsalpha}%{plainnat}
+		\bibliographystyle{plainnat}%{plainnat}
 		\renewcommand{\bibname}{References}
 		\bibliography{references}
 		\end{footnotesize}
