--- a/00-abstract.tex
+++ b/00-abstract.tex
@@ -1,32 +1,19 @@
 \chapter{Abstract}
-% Introduction
-Companies in any kind of industry, be it electronics, pharmaceutics, food, or others, need to support their operations by managing the exchange of information and resources with other companies. This flow of resources and information is commonly referred to as the supply chain. In a practical sense, the flow of products and services goes from supplier to consumer, but as supply chains grow more complex, they span multiple businesses and relationships, and are interlaced in many ways. The paths the information takes are not always obvious, making it hard to track either information or resources. This is a reason why supply chain management (SCM), the discipline which deals with the coordination of a supply chain, is becoming increasingly more important. 
+Companies in any kind of industry exchange information and resources with other companies, creating a flow commonly referred to as the supply chain. The direction of this flow goes from supplier to consumer, with complex exchanges and transformations happening between the origin and the final delivery of a product. Thus, supply chain management (SCM) is essential in the coordination of a supply chain.
 
-% Problem
-Managing inventory and suppliers while maintaining safety, quality and keeping to the schedule is a difficult task. Delays are common, and a company's finances, growth and reputation are affected. This is further aggravated by the fact that information is not always accurate or available when needed. And the fact that companies value their privacy makes it so that sharing information with others is not always simple or desirable. Furthermore, supply chains have many manual processes of inserting information into the companies' systems, which are slow and error-prone.
-
-% Why is it a problem
-Provenance and traceability of a supply chain are a big objective for companies, along with improving security, efficiency and effectiveness. Most of these issues are, in great part, caused by the use of inadequate processes or even of inadequate software, which, traditionally, is centralized and often difficult to extend. The software used is also prone to synchronization problems, leading to big delays in both relaying the information and resources and making payments possible. 
+%Problem
+The supply chain faces many difficulties: traceability and provenance of the products, inventory management, quality control and schedules to follow are some.  Delays are common, and a company's finances, growth and reputation are affected by them. These difficulties are further aggravated by the fact that some much needed information is not always accurate or available, a consequence, in part, of the manual processes for inserting information into the companies' systems, which are slow and error-prone. This might be caused by the non-existence of reliable technologies which can integrate the information in a secure and fast manner.
 
 % Solution
-One way to approach these specific problems of supply chains is to prioritize them and update the supporting technologies with an updated architecture that can focus on solving them. One such technology that might be able to handle all the requirements that these problems elicit is the blockchain distributed architecture. Blockchain is a decentralized technology that has no single point of failure and allows for the immutable storage of verifiable data all over the computers that store it. With blockchain, information is stored sequentially and any piece of information, since the genesis of the chain is accessible anytime, anywhere. As such, blockchains might be the adequate mean to achieve traceability of a supply chain. At the same time they are a secure and incorruptible way to store information, with a fast synchronization time. This technology could possibly lead the way to turning the chain fully digital and automated, closing the analog gaps and possibly achieving a more global overview of products and processes.
+One way to approach these problems of supply chains is to prioritize them and update the supporting technologies. A technology that seems adequate is the blockchain distributed architecture. This is a distributed technology which allows for the immutable and secure storage of data, making any piece of information be accessible anytime, anywhere. As such, blockchains might be the adequate mean to achieve traceability of a supply chain, possibly leading the way to turning the chain fully digital and automated.
 
-This dissertation focuses on researching the extent of the issues of supply chain management, and to what extent blockchain could be applied in a beneficial way to solve these issues. The real statement here being questioned is if blockchain architectures can be a good fit for supply chain management.
+This dissertation focuses on researching the extent of the issues of supply chain management, and to what extent blockchain could be applied in a beneficial way to solve these issues. Therefore, the hypothesis is that blockchain architectures can be a good fit for supply chain management.
 
-To this end, the underlying assumptions that this statement might be based on were investigated. A survey was conducted to elicit the most important issues and requirements for a supply chain. The objective was to gather the opinions of supply chain experts to form a list of the most important improvements and requirements of the supply chain. And even if these are the most important improvements, in general, this technology is not limited to them, giving way for other use cases to be explored.
+To validate the issues of SCM and elicit requirements for a supply chain software system, a survey was conducted. By using these requirements, it was possible to propose and iteratively build a blockchain architectural solution, aiming to test whether the gathered requirements are feasible to be implemented. 
 
-But, more specifically, by using these requirements, it was possible to propose and iteratively build a blockchain architectural solution, aiming to test whether the gathered requirements are feasible to be implemented. 
+In the end, the proposed system was analyzed against the elicited requirements, in order to verify the degree to which it was possible to implement them. From this verification, it was possible to draw some conclusions. The fact is that the designed architecture could prove to handle most of the requirements for a supply chain, but the implementation of other requirements remains to be achieved. The expectation is that the contributions, both of the successes and failures, might help pave the way for future work and research in integrating blockchain architecture into SCM software systems.
 
-In the end, the proposed system was analyzed against the elicited requirements, in order to verify the degree to which it was possible to implement them. From this verification, it was possible to draw some conclusions towards whether blockchain can be a good design for supply chain management or not. 
-
-The conclusion for this problem can not be answered with a simple yes or no, but with some uncertainty. The fact is that the designed architecture could prove to handle most of the requirements for a supply chain, but the implementation of other requirements remains to be achieved. Maybe future systems and designs can better implement all the requirements. Even so, while this final answer is still more affirmative than negative in tone, the expectation is that the contributions here present might help pave the way for future work and research.
-
-\textbf{Keywords:} Supply Chain, Supply Chain Management, Industry, Requirements, Supply Chain Issues, Supply Chain Improvement, Blockchain, Network, Decentralization, Security, Traceability, Provenance, Information Integration, Ledger, Interoperability, Auditing
-
-
-%\chapter{Resumo}
-%Tradução PT do abstract
-
+\textbf{Keywords:} Supply Chain, Supply Chain Management, Requirements Engineering, Blockchain, Distributed Architecture, Security, Traceability, Information Integration, Interoperability
 
 
 
