--- a/00-resumo.tex
+++ b/00-resumo.tex
@@ -1,26 +1,17 @@
 \chapter{Resumo}
 % Introduction
-Em empresas de qualquer indústria, seja da indústria eletrónica, farmacêutica, alimentar ou outras, há uma necessidade de suportar as operações, gerindo a troca de informação e recursos com outras empresas. Este fluxo de recursos e informação é chamado de cadeia de logística. De forma mais prática, o fluxo de produtos e serviços flui de um fornecedor até ao consumidor final. No entanto, com o crescimento das cadeias de logística, estas têm vindo a ficar mais complexas, abrangindo multiplos negócios e relações empresariais, que por usa vez se entrelaçam de várias formas. Os caminhos que a informação toma nem sempre são óbvios, fazendo com que seja difícil rastrear e obter informação e recursos. É por esta razão que a gestão da cadeia de logística, a disciplina que lida com a coordenação da cadeia de logística, está a tornar-se cada vez mais importante. 
+Empresas de qualquer indústria trocam informação e recursos entre elas, criando um fluxo comummente chamado de cadeia de logística. A direção deste fluxo vai do fornecedor até ao consumidor, com trocas e transformações complexas a acontecer desde a origem até à entrega final do produto. Assim, a gestão da cadeia de logística é essential para coordenar esta cadeia.
 
-% Problem
-Gerir inventário, fornecedores e manter padrões de qualidade, segurança, assim como cumprir um plano calendarizado é uma tarefa difícil. Atrasos são comuns e as finanças de uma empresas, assim como o seu crescimento e reputação podem ser afetados. Isto é ainda agravado pelo facto de que a informação pode não ser exata ou então não estar disponível quando é necessária. O facto de as empresas também valorizarem a sua privacidade faz com que este processo de partilha de informação não seja sempre simples ou desejável. Além disso, as cadeias de logística têm muitos processos manuais de inserção de informação para os sistemas empresariais, sendo este um processo por vezes lento e propenso a erros.
+%Problem
+A cadeia de logística enfrenta muitas dificuldades: rastreabilidade de produtos, gestão de inventário, controlo de qualidade e de prazos são apenas algumas. Atrasos são comuns e podem afetar as finanças, crescimentoe reputação de uma empresa. A adicionar a estas dificuldades, muitas vezes a informação necessária a certos processos não está disponível ou não é exata, consequencia, em parte, dos processos manuais usados para inserir informação nos sistemas, o que é lento e pode levar a erros. Isto poderá ser causado pela não existencia de tecnologias de confiança que possam integrar toda a informação de forma segura e rápida.
 
-% Why is it a problem
-A rastreabilidade e informação sobre a origem de informação e produtos nas cadeias de logística é um grande objetivo das empresas, assim como melhorias na segurança, eficiência e eficácia da cadeia. A maioria destes problems são causados, em grande parte, pelo uso de processos de gestão inadequados ou então, por vezes, mesmo por programas informáticos inadequados. Estes últimos, tradicionalmente, usavam arquiteturas centralizadas e podiam ser difíceis de atualizar. Ao mesmo tempo, podem ser propensos a problemas de sincronização, levando a grandes atrasos tanto em transmitir a informação, como a transmitir recursos e até a realizar pagamentos.
+Uma forma de abordar estes problemas da cadeia de logística é priorizá-los e atualizar as tecnologias de suporte da cadeia de logística. Uma tecnologia que parece adequada é a arquitetura distribuída de blockchain. Esta é uma tecnologia distribuida que permite o armazenamento seguro e imutável de dados, levando a que a informação esteja acessível em qualquer lugar, a qualquer hora. Assim, as blockchains podem ser o meio mais adequado de atingir a rastreabilidadede uma cadeia de logística, possivelmente levando a que esta se torne completamente digital.
 
-% Solution
-Uma forma de abordar estes problemas específicos da cadeia de logística, é priorizá-los e atualizar as tecnologias que suportam a cadeia com uma arquitetura atualizada que possa ter focar-se em resolver estes problemas. Uma tecnologia que parecer ser capaz de aguentar com todos os requisitos que estes problemas levantam é a arquitetura distribuída de blockchain. A blockchain é uma tecnologia descentralizada que não tem pontos únicos de falha e permite armazenar informação de forma imutável e verificável nos computadores que a correrem. Com a blockchain, a informação é guardada de forma sequencial e qualquer parte da informação pode ser acedida em qualquer local e a qualquer hora. Assim, as blockchains podem ser a forma adequada de atingir a rastreabilidade numa cadeia de logística. Ao mesmo tempo, são seguras e uma forma incorruptível de guardar informação, com um tempo rápido de sincronização. Esta tecnologia poderá possívelmente conduzir a que a cadeia de logística se torne finalmente totalmente digital e automatizada, fechando os buracos de informação trazidos pelos processos manuais, e possivelmente alcançando uma visão global de processos e produtos.
+Esta dissertação foca-se em pesquisar os problemas da gestão de cadeias de logística e a que nível poderão ser aplicadas blockchains de forma benéfica para resolver esses problemas. Assim, a hipótese é que as arquiteturas blockchain possam ser um bom ajuste para a gestão das cadeias de logística.
 
-Esta dissertação foca-se em estudar a extensão dos problemas da gestão da cadeia de logística, e em que medida a blockchain pode ser aplicada como forma benéfica de os resolver. A verdadeira declaração aqui defendida, ou que se está a tentar confirmar se é válida, é se as arquiteturas baseadas em blockchain podem então ser uma boa aplicação a usar para a gestão da cadeia de logística.
+Para validar estes problemas e levantar requisitos para um sistema de software de logística, foi realizado um inquérito. Usando estes requisitos, foi possível propor e iterativamente construir uma arquitetura de blockchain, para testar se os requisitos eram possíveis de ser implementados.
 
-Para este fim, foram investigadas as suposições nas quais esta declaração se baseou. Um inquérito foi conduzido para descobrir quais os problemas mais importantes e os requisitos correspondestes da cadeia de logística. O objetivo era reunir um conjunto de opiniões de profissionais desta área e formar uma lista dos requisitos mais importantes, assim como melhorias a fazer á gestão desta cadeia. Mesmo assim, esta tecnologia pode não se limitar a estas melhorias, havendo bastantes casos de uso a explorar.
-
-Mas, mais especificamente, usando estes requisitos levantados, é possível propor e construir iterativamente uma solução arquitetural da blockchain, com o objetivo de testar se os requisitos reunidos são passíveis de ser implementados. 
-
-No final, tornou-se possível propor e implementar um sistema, com base nos requisitos analisados, de forma a verificar a possibilidade da sua implementação e inclusão na arquitetura. Desta verificação, foi possível chegar a algumas conclusões sobre se a blockchain pode de facto ser um bom design para a gestão de cadeias de logística ou não.
-
-A conclusão para este problema, no entanto, não teve como resposta um simples sim ou não, havendo alguma incerteza associada ao uso da tecnologia. O facto é que a arquitetura desenhada provou conseguir aguentar com a maioria dos requisitos necessários, mas a implementação de outros não foi conseguida, não sendo possível provar que são impossíveis de implementar por outras formas que não a desenhada. Futuros sistemas talvez consigam com mais sucesso implementar a totalidade dos requisitos. Assim, enquanto que esta resposta final é mais afirmativa que negativa, a expetativa é que as contribuições aqui presentes possam ajudar em futuros estudos e investigação na área.
-
+No final, o sistema proposto foi analisado e comparado com os requisitos, para verificar se a implementação foi possível. Daqui foi possível tirar algumas conclusões, nomeadamente que esta arquitetura provou conseguir cumprir a maior parte dos requisitos, mas a implementação de outros não foi conseguida e permanece por provar que consiga ser feita. Assim, espera-se que as contribuições do trabalho aqui realizado possam ser uma base para trabalhos futuros de investigação em integrar esta arquitetura com sistemas reais de gestão de cadeias de logística, nomeadamente a partir dos requisitos implementados.
 
 %\chapter{Resumo}
 %Tradução PT do abstract
