Abstract further reduced

--- a/00-resumo.tex
+++ b/00-resumo.tex
@@ -7,7 +7,7 @@ A cadeia de logística enfrenta muitas dificuldades: rastreabilidade de produtos
 
 Uma forma de abordar estes problemas da cadeia de logística é priorizá-los e atualizar as tecnologias de suporte da cadeia de logística. Uma tecnologia que parece adequada é a arquitetura distribuída de blockchain. Esta é uma tecnologia distribuida que permite o armazenamento seguro e imutável de dados, levando a que a informação esteja acessível em qualquer lugar, a qualquer hora. Assim, as blockchains podem ser o meio mais adequado de atingir a rastreabilidadede uma cadeia de logística, possivelmente levando a que esta se torne completamente digital.
 
-Esta dissertação foca-se em pesquisar os problemas da gestão de cadeias de logística e a que nível poderão ser aplicadas blockchains de forma benéfica para resolver esses problemas. Assim, a hipótese é que as arquiteturas blockchain possam ser um bom ajuste para a gestão das cadeias de logística.
+Esta dissertação foca-se em pesquisar os problemas da gestão de cadeias de logística e a que nível poderão ser aplicadas blockchains de forma benéfica para resolver esses problemas. A hipótese é que as blockchain possam ser uma arquitetura adequada para sistemas de gestão das cadeias de logística.
 
 Para validar estes problemas e levantar requisitos para um sistema de software de logística, foi realizado um inquérito. Usando estes requisitos, foi possível propor e iterativamente construir uma arquitetura de blockchain, para testar se os requisitos eram possíveis de ser implementados.
 
