--- a/00-abstract.tex
+++ b/00-abstract.tex
@@ -1,17 +1,17 @@
 \chapter{Abstract}
-Companies in any kind of industry exchange information and resources with other companies, creating a flow commonly referred to as the supply chain. The direction of this flow goes from supplier to consumer, with complex exchanges and transformations happening between the origin and the final delivery of a product. Thus, supply chain management (SCM) is essential in the coordination of a supply chain.
+Supply chain refers to the flow of products and associated information which are exchanged between companies. The direction of this flow goes from supplier to consumer, with complex exchanges and transformations happening between the origin and delivery of a product. Thus, supply chain management (SCM) is essential in the coordination of a supply chain.
 
 %Problem
-The supply chain faces many difficulties: traceability and provenance of the products, inventory management, quality control and schedules to follow are some.  Delays are common, and a company's finances, growth and reputation are affected by them. These difficulties are further aggravated by the fact that some much needed information is not always accurate or available, a consequence, in part, of the manual processes for inserting information into the companies' systems, which are slow and error-prone. This might be caused by the non-existence of reliable technologies which can integrate the information in a secure and fast manner.
+A supply chain faces many difficulties: traceability and provenance of the products, inventory management, quality control and schedules to follow are some.  Delays are common, affecting a company's finances, growth and reputation. This is aggravated by the fact that the needed information is not always accurate or available, a consequence, in part, of the manual processes for inserting information into the companies' systems and of the non-existence of reliable technologies which can integrate the information in a secure and fast manner.
 
 % Solution
-One way to approach these problems of supply chains is to prioritize them and update the supporting technologies. A technology that seems adequate is the blockchain distributed architecture. This is a distributed technology which allows for the immutable and secure storage of data, making any piece of information be accessible anytime, anywhere. As such, blockchains might be the adequate mean to achieve traceability of a supply chain, possibly leading the way to turning the chain fully digital and automated.
+One way to approach these problems of supply chains is to prioritize them and update the supporting technologies. A technology that seems adequate is the blockchain distributed architecture, which allows for the immutable and secure storage of data, making any piece of information be accessible anytime, anywhere. As such, blockchains might be the adequate mean to achieve traceability of a supply chain, possibly leading the way to turning the chain fully digital and automated.
 
-This dissertation focuses on researching the extent of the issues of supply chain management, and to what extent blockchain could be applied in a beneficial way to solve these issues. Therefore, the hypothesis is that blockchain architectures can be a good fit for supply chain management.
+This dissertation focuses on researching the extent of the issues of supply chains, and whether blockchain can be used to solve these issues. Therefore, the hypothesis is that blockchain architectures can be a good fit for supply chain management.
 
 To validate the issues of SCM and elicit requirements for a supply chain software system, a survey was conducted. By using these requirements, it was possible to propose and iteratively build a blockchain architectural solution, aiming to test whether the gathered requirements are feasible to be implemented. 
 
-In the end, the proposed system was analyzed against the elicited requirements, in order to verify the degree to which it was possible to implement them. From this verification, it was possible to draw some conclusions. The fact is that the designed architecture could prove to handle most of the requirements for a supply chain, but the implementation of other requirements remains to be achieved. The expectation is that the contributions, both of the successes and failures, might help pave the way for future work and research in integrating blockchain architecture into SCM software systems.
+In the end, the solution was analyzed against the elicited requirements, in order to verify the degree to which it was possible to implement them. From this verification, it was possible to draw some conclusions. The fact is that the designed architecture could prove to handle most of the requirements for a supply chain, but the implementation of other requirements remains to be achieved. The expectation is that the contributions, both of the successes and failures, might help pave the way for future work and research in integrating blockchain architecture into SCM software systems.
 
 \textbf{Keywords:} Supply Chain, Supply Chain Management, Requirements Engineering, Blockchain, Distributed Architecture, Security, Traceability, Information Integration, Interoperability
 
